log
Fri Mar 27 05:44:24 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
9312a44
Fri Mar 27 05:55:08 PM UTC 2026: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:86:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   86 |     list->size++;
      |         ^~
278e22c
Fri Mar 27 05:55:48 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:86:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   86 |     list->size++;
      |         ^~
ce26fb9
Fri Mar 27 05:56:20 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:86:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   86 |     list->size++;
      |         ^~
d260ae7
Fri Mar 27 05:56:36 PM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/60
1dfe0b4
Fri Mar 27 06:04:35 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:87:5: error: expected ‘}’ before ‘else’
   87 |     else {
      |     ^~~~
list.c:88:15: error: ‘List’ {aka ‘struct List’} has no member named ‘trail’; did you mean ‘tail’?
   88 |         list->trail = newNode;
      |               ^~~~~
      |               tail
7379eeb
Fri Mar 27 06:04:56 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:87:5: error: expected ‘}’ before ‘else’
   87 |     else {
      |     ^~~~
60e6260
Fri Mar 27 06:06:05 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:90:15: error: ‘List’ {aka ‘struct List’} has no member named ‘trail’; did you mean ‘tail’?
   90 |         list->trail = newNode;
      |               ^~~~~
      |               tail
c1c101d
Fri Mar 27 06:06:14 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
9a49072
Fri Mar 27 06:15:31 PM UTC 2026: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
5147c4d
Fri Mar 27 06:29:01 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
c1fc782
Fri Mar 27 06:31:56 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
4239afa
Fri Mar 27 06:34:11 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
59e115f
Sat Mar 28 11:27:36 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
c9f17f4
Sat Mar 28 11:28:50 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
ed5b7b7
Sat Mar 28 11:29:05 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
26f6d5d
Sat Mar 28 11:32:12 PM UTC 2026: 
 list.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 20/60
c775c5d
Sat Mar 28 11:34:37 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
46e3403
Sat Mar 28 11:35:20 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 25/60
3a0cea3
Sat Mar 28 11:36:48 PM UTC 2026: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|0
718cc69
Sat Mar 28 11:37:39 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0d511a6
Sat Mar 28 11:38:09 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/60
700348f
Sat Mar 28 11:39:08 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|3
total_score: 30/60
19ee7b9
Sat Mar 28 11:41:21 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:66:5: error: ‘last’ undeclared (first use in this function); did you mean ‘list’?
   66 |     last->current = list->tail;
      |     ^~~~
      |     list
list.c:66:5: note: each undeclared identifier is reported only once for each function it appears in
88269eb
Sat Mar 28 11:41:32 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 30/60
83b5233
Sat Mar 28 11:41:57 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|3
total_score: 30/60
0fea563
Sat Mar 28 11:42:57 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
01a3c26
Sat Mar 28 11:43:32 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 40/60
60a6c84
Sat Mar 28 11:44:41 PM UTC 2026: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 40/60
9758df7
Sat Mar 28 11:51:58 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 40/60
ce65054
Sat Mar 28 11:52:16 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|1
total_score: 50/60
35e03e9
Sat Mar 28 11:53:09 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 50/60
9e54d6a
Sat Mar 28 11:59:43 PM UTC 2026: 
 list.c | 33 ++++++++++++++++-----------------
 1 file changed, 16 insertions(+), 17 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:138:11: error: unused variable ‘der’ [-Werror=unused-variable]
  138 |     Node* der = eliminado->next;
      |           ^~~
list.c:137:11: error: unused variable ‘izq’ [-Werror=unused-variable]
  137 |     Node* izq = eliminado->prev;
      |           ^~~
list.c:136:11: error: unused variable ‘data’ [-Werror=unused-variable]
  136 |     void* data = eliminado->data;
      |           ^~~~
cc1: all warnings being treated as errors
2b31593
